@@ -14,11 +14,12 @@
 package com.canonical.rockcraft.builder;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Rockcraft creation options
+ * Rockcraft.yaml generation options
  */
 public class RockcraftOptions {
 
@@ -32,6 +33,7 @@ public class RockcraftOptions {
     private String branch;
     private RockArchitecture[] architectures = new RockArchitecture[0];
     private List<String> slices = new ArrayList<String>();
+
     /**
      * Construct RockcraftOptions
      */
@@ -40,6 +42,7 @@ public class RockcraftOptions {
 
     /**
      * Gets the target release (integer)
+     *
      * @return target release
      */
     public int getTargetRelease() {
@@ -48,6 +51,7 @@ public class RockcraftOptions {
 
     /**
      * Sets the target release
+     *
      * @param targetRelease - target OpenJDK release
      */
     public void setTargetRelease(int targetRelease) {
@@ -56,6 +60,7 @@ public class RockcraftOptions {
 
     /**
      * Get the Ubuntu OpenJDK package used to build the runtime image
+     *
      * @return package name
      */
     public String getBuildPackage() {
@@ -64,6 +69,7 @@ public class RockcraftOptions {
 
     /**
      * Set the OpenJDK package used to build the runtime image
+     *
      * @param buildPackage - Ubuntu package name
      */
     public void setBuildPackage(String buildPackage) {
@@ -73,6 +79,7 @@ public class RockcraftOptions {
     /**
      * Gets a flag whether to use jlink plugin (early access option).
      * Default - false.
+     *
      * @return jlink plugin flag
      */
     public boolean getJlink() {
@@ -81,6 +88,7 @@ public class RockcraftOptions {
 
     /**
      * Enable/Disable jlink plugin
+     *
      * @param jlink - flag
      */
     public void setJlink(boolean jlink) {
@@ -89,6 +97,7 @@ public class RockcraftOptions {
 
     /**
      * Gets <i>chisel-releases</i> branch
+     *
      * @return <i>chisel-releases</i> branch
      */
     public String getBranch() {
@@ -97,6 +106,7 @@ public class RockcraftOptions {
 
     /**
      * Sets <i>chisel-releases</i> branch
+     *
      * @param branch - git branch
      */
     public void setBranch(String branch) {
@@ -105,6 +115,7 @@ public class RockcraftOptions {
 
     /**
      * Gets the summary comment for the ROCK
+     *
      * @return summary comment
      */
     public String getSummary() {
@@ -113,6 +124,7 @@ public class RockcraftOptions {
 
     /**
      * Sets the summary comment for the ROCK
+     *
      * @param summary - summary comment
      */
     public void setSummary(String summary) {
@@ -121,6 +133,7 @@ public class RockcraftOptions {
 
     /**
      * Gets a description file for the ROCK
+     *
      * @return path to the description
      */
     public Path getDescription() {
@@ -129,14 +142,18 @@ public class RockcraftOptions {
 
     /**
      * Sets the path to the description file
+     *
      * @param description - description file
      */
     public void setDescription(String description) {
-        this.description = Path.of(description);
+        if (description != null){
+            this.description = Paths.get(description);
+        }
     }
 
     /**
      * Gets the list of the supported architectures
+     *
      * @return supported architectures
      */
     public RockArchitecture[] getArchitectures() {
@@ -145,6 +162,7 @@ public class RockcraftOptions {
 
     /**
      * Sets the list of the supported architectures
+     *
      * @param architectures - supported architectures
      */
     public void setArchitectures(RockArchitecture[] architectures) {
@@ -153,6 +171,7 @@ public class RockcraftOptions {
 
     /**
      * Gets the service command (opitonal, override)
+     *
      * @return the service command line
      */
     public String getCommand() {
@@ -161,6 +180,7 @@ public class RockcraftOptions {
 
     /**
      * Override the service command line
+     *
      * @param command - command line
      */
     public void setCommand(String command) {
@@ -169,6 +189,7 @@ public class RockcraftOptions {
 
     /**
      * Get chisel slices to install
+     *
      * @return list of the slice names
      */
     public List<String> getSlices() {
@@ -177,6 +198,7 @@ public class RockcraftOptions {
 
     /**
      * Overrides chisel slices to install
+     *
      * @param slices - list of chisel slices
      */
     public void setSlices(List<String> slices) {
@@ -185,6 +207,7 @@ public class RockcraftOptions {
 
     /**
      * Get Git repository URL of the <i>chisel-releases</i>
+     *
      * @return Git repository URL
      */
     public String getSource() {
@@ -193,6 +216,7 @@ public class RockcraftOptions {
 
     /**
      * Override <i>chisel-releases</i> repository URL
+     *
      * @param source - Git repository URL
      */
     public void setSource(String source) {
